--- a/pages/subport.html
+++ b/pages/subport.html
@@ -68,158 +68,151 @@
         <!-- Contact End -->
 
         <section class="section1" id="section1">
-            <h1>School Locater</h1>
-            <div class="container">
-              <div class="map-bar">
-                <div class="tab-container">
-                  <div class="tab" onclick="showContent('tab1')" data-tab="tab1">China</div>
-                  <div class="tab" onclick="showContent('tab2')" data-tab="tab2">Philippines / India</div>
-                  <div class="tab" onclick="showContent('tab3')" data-tab="tab3">Sri Lanka</div>
-                  <div class="tab" onclick="showContent('tab4')" data-tab="tab4">Vietnam</div>
-                </div>
+          <h1>School Locater</h1>
+          <div class="container">
+            <div class="map-bar">
+              <div class="tab-container">
+                <div class="tab" onclick="showContent('tab1')" data-tab="tab1">China</div>
+                <div class="tab" onclick="showContent('tab2')" data-tab="tab2">Philippines / India</div>
+                <div class="tab" onclick="showContent('tab3')" data-tab="tab3">Sri Lanka</div>
+                <div class="tab" onclick="showContent('tab4')" data-tab="tab4">Vietnam</div>
               </div>
-              <div class="text-container" id="textContainer">
-                <div id="tab1Content" style="display: none;">
-                  <h2>Monash LGA</h2>
-                    <p>
-                        The Chinese community in Victoria is the second largest in Australia. Many people in the Chinese community 
-                        live in Melbourne’s south–eastern and eastern suburbs. The City of Monash is home to one 
-                        of the largest Chinese communities in Victoria with 47,238 people. The City of Whitehorse 
-                        is next with 44,445 people. The Chinese community is an established and steadily growing community 
-                        in Victoria, with 27% of the population arriving between 2016 and 2021.
-                    </p>
-                </div>
-                <div id="tab2Content" style="display: none;">
-                  <h2>Wyndham LGA</h2>
-                    <p>
-                        The Indian community in Victoria is one of the largest in Australia.  Many people in the 
-                        Indian community live in Melbourne’s south–eastern and north–western suburbs. The City 
-                        of Wyndham is home to one of the largest Indian communities in Victoria with 65,433 people.
-                        The City of Casey is next with 44,967 people. Between 2011 and 2021, the Indian community
-                        in Victoria continued to grow. The majority (55.3%) of the Indian community arrived in 
-                        Victoria during this period.
-                    </p>
-            
-                    <p>
-                        The Filipino community in Victoria is the second largest in Australia. Many people in the
-                        Filipino community live in Melbourne’s south–western and south–eastern suburbs. The City 
-                        of Wyndham is home to one of the largest Filipino communities in Victoria with 10,628 people.
-                        The City of Casey is next with 9,485 people. Between 1981 and 2016, the increase in the 
-                        Philippines–born population of Victoria soared and went from 3,55 to 51,287 people. 
-                        The Filipino community is growing, with many people arriving between 2016 and 2021.
-                    </p>
-                </div>
-                <div id="tab3Content" style="display: none;">
-                  <h2>Casey LGA</h2>
-                    <p>
-                        The Sri Lankan community in Victoria is the largest in Australia. Many people in the 
-                        Sri Lankan community live in Melbourne’s south–eastern suburbs. The City of Casey is 
-                        home to one of the largest Sri Lankan communities in Victoria with 18,184 people. 
-                        The City of Monash is next with 8,472 people. The Sri Lankan community is growing 
-                        and many people arrived between 2001 and 2010.
-                    </p>
-                </div>
-                <div id="tab4Content" style="display: none;">
-                  <h2>Brimbank LGA</h2>
-                    <p>
-                        The Vietnamese community in Victoria is one of the largest in Australia. Many people
-                        in the Vietnamese community live in Melbourne’s south–eastern and western suburbs. 
-                        The City of Brimbank is home to one of the largest Vietnamese communities in Victoria 
-                        with 32,861 people. The City of Greater Dandenong is next with 17,653 people. The 
-                        Vietnamese community is well established in Victoria, with many arriving between 1981 
-                        and 1990.
-                    </p>
-                </div>
             </div>
-              <div class="suburb-dropdown" id="dropdownTab1"  data-tab="tab1">
-                <select id="dropdownMenuTab1">
-                  <option value=""disabled>Select a Suburb</option> 
-                  <option value="">Show All</option> 
-                  <option value="Ashwood">Ashwood</option>
-                  <option value="Clayton">Clayton</option>
-                  <option value="Glen waverley"> Glen waverley</option>
-                  <option value="Hughesdale">Hughesdale</option>
-                  <option value="Mount waverley">Mount waverley</option>
-                  <option value="Mulgrave">Mulgrave </option>
-                  <option value="Oakleigh">Oakleigh</option>
-                  <option value="Oakleigh east">Oakleigh east</option>
-                  <option value="Oakleigh south">Oakleigh south</option>
-                  <option value="Wheelers hill">Wheelers hill</option>
-                </select>
+            <div class="text-container" id="textContainer">
+              <div id="tab1Content" style="display: none;">
+                <h2>Monash LGA</h2>
+                <ul>
+                    <li>The Chinese community in Victoria is the second largest in Australia.</li>
+                    <li>Many people in the Chinese community live in Melbourne’s south–eastern and eastern suburbs.</li>
+                    <li>The City of Monash is home to one of the largest Chinese communities in Victoria with 47,238 people.</li>
+                    <li>The Chinese community is an established and steadily growing community in Victoria, with 27% of the population arriving between 2016 and 2021.</li>
+                </ul>
               </div>
-              <div class="suburb-dropdown" id="dropdownTab2"  data-tab="tab2">
-                <select id="dropdownMenuTab2">
-                  <option value=""disabled>Select a Suburb</option> 
-                  <option value="">Show All</option> 
-                  <option value="Hoppers crossing">Hoppers crossing</option>
-                  <option value="Hoppers crossing north">Hoppers crossing north</option>
-                  <option value="Little river">Little river</option>
-                  <option value="Manor lakes">Manor lakes</option>
-                  <option value="Point cook">Point cook</option>
-                  <option value="Tarneit">Tarneit</option>
-                  <option value="Truganina">Truganina</option>
-                  <option value="Truganina south">Truganina south</option>
-                  <option value="Werribee">Werribee</option>
-                  <option value="Werribee north">Werribee north</option>
-                  <option value="Wyndham vale">Wyndham vale</option>
-                </select>
+              <div id="tab2Content" style="display: none;">
+                <h2>Wyndham LGA</h2>
+                <p>Indian </p>
+                <ul>
+                    <li>The Indian community in Victoria is one of the largest in Australia.</li>
+                    <li>Many people in the Indian community live in Melbourne’s south–eastern and north–western suburbs.</li>
+                    <li>The City of Wyndham is home to one of the largest Indian communities in Victoria with 65,433 people.</li>
+                    <li>The City of Casey is next with 44,967 people. Between 2011 and 2021, the Indian community in Victoria continued to grow. The majority (55.3%) of the Indian community arrived in Victoria during this period.</li>
+                </ul>
+                <p>Filipino</p>
+                <ul>
+                    <li>The Filipino community in Victoria is the second largest in Australia.</li>
+                    <li>Many people in the Filipino community live in Melbourne’s south–western and south–eastern suburbs.</li>
+                    <li>The City of Wyndham is home to one of the largest Filipino communities in Victoria with 10,628 people.</li>
+                    <li>The Filipino community is growing, with many people arriving between 2016 and 2021.</li>
+                </ul>
               </div>
-              <div class="suburb-dropdown" id="dropdownTab3"  data-tab="tab3">
-                <select id="dropdownMenuTab3">
-                  <option value=""disabled>Select a Suburb</option> 
-                  <option value="">Show All</option> 
-                  <option value="Berwick">Berwick</option>
-                  <option value="Botanic ridge">Botanic ridge</option>
-                  <option value="Clyde">Clyde</option>
-                  <option value="Clyde north">Clyde north</option>
-                  <option value="Cranbourne">Cranbourne</option>
-                  <option value="Cranbourne east">Cranbourne east</option>
-                  <option value="Cranbourne north">Cranbourne north</option>
-                  <option value="Cranbourne south">Cranbourne south</option>
-                  <option value="Cranbourne west">Cranbourne west</option>
-                  <option value="Devon meadows">Devon meadows</option>
-                  <option value="Doveton">Doveton</option>
-                  <option value="Endeavour hills">Endeavour hills</option>
-                  <option value="Hampton park">Hampton park</option>
-                  <option value="Harkaway">Harkaway</option>
-                  <option value="Hallam">Hallam</option>
-                  <option value="Lynbrook">Lynbrook</option>
-                  <option value="Lyndhurst">Lyndhurst</option>
-                  <option value="Narre warren">Narre warren</option>
-                  <option value="Narre warren north">Narre warren north</option>
-                  <option value="Narre warren south">Narre warren south</option>
-                  <option value="Pearcedale">Pearcedale</option>
-                  <option value="Tooradin">Tooradin</option>
-                </select>
+              <div id="tab3Content" style="display: none;">
+                <h2>Casey LGA</h2>
+                <ul>
+                    <li>The Sri Lankan community in Victoria is the largest in Australia.</li>
+                    <li>Many people in the Sri Lankan community live in Melbourne’s south–eastern suburbs.</li>
+                    <li>The City of Casey is home to one of the largest Chinese communities in Victoria with 18,184 people.</li>
+                    <li>The Chinese community is growing and and many people arrived between 2001 and 2010.</li>
+                </ul>
               </div>
-              <div class="suburb-dropdown" id="dropdownTab4"  data-tab="tab4">
-                <select id="dropdownMenuTab4">
-                  <option value=""disabled>Select a Suburb</option> 
-                  <option value="">Show All</option> 
-                  <option value="Albion">Albion</option>
-                  <option value="Albanvale">Albanvale</option>
-                  <option value="Ardeer">Ardeer</option>
-                  <option value="Cairnlea">Cairnlea</option>
-                  <option value="Delahey">Delahey</option>
-                  <option value="Deer park">Deer park</option>
-                  <option value="Derrimut">Derrimut</option>
-                  <option value="Kealba">Kealba</option>
-                  <option value="Keilor">Keilor</option>
-                  <option value="Keilor downs">Keilor downs</option>
-                  <option value="Kings park">Kings park</option>
-                  <option value="St albans">St albans</option>
-                  <option value="St albans south">St albans south</option>
-                  <option value="Sunshine">Sunshine</option>
-                  <option value="Sunshine north">Sunshine north</option>
-                  <option value="Sunshine south west">Sunshine south west</option>
-                  <option value="Sunshine west">Sunshine west</option>
-                  <option value="Sydenham">Sydenham</option>
-                  <option value="Taylors lakes">Taylors lakes</option>        
-                </select>
+              <div id="tab4Content" style="display: none;">
+                <h2>Brimbank LGA</h2>
+                <ul>
+                    <li>The Vietnamese community in Victoria is the largest in Australia.</li>
+                    <li>Many people in the Vietnamese community live in Melbourne’s south–eastern and western suburbs</li>
+                    <li>The City of Brimbank is home to one of the largest Chinese communities in Victoria with 32,861 people.</li>
+                    <li>The Chinese community is well established in Victoria, with many arriving between 1981 and 1990.</li>
+                </ul>
               </div>
-              <div class="map" id="map"></div>
+          </div>
+            <div class="suburb-dropdown" id="dropdownTab1"  data-tab="tab1">
+              <select id="dropdownMenuTab1">
+                <option value=""disabled>Select a Suburb</option> 
+                <option value="">Show All</option> 
+                <option value="Ashwood">Ashwood</option>
+                <option value="Clayton">Clayton</option>
+                <option value="Glen waverley"> Glen waverley</option>
+                <option value="Hughesdale">Hughesdale</option>
+                <option value="Mount waverley">Mount waverley</option>
+                <option value="Mulgrave">Mulgrave </option>
+                <option value="Oakleigh">Oakleigh</option>
+                <option value="Oakleigh east">Oakleigh east</option>
+                <option value="Oakleigh south">Oakleigh south</option>
+                <option value="Wheelers hill">Wheelers hill</option>
+              </select>
             </div>
-          </section>
+            <div class="suburb-dropdown" id="dropdownTab2"  data-tab="tab2">
+              <select id="dropdownMenuTab2">
+                <option value=""disabled>Select a Suburb</option> 
+                <option value="">Show All</option> 
+                <option value="Hoppers crossing">Hoppers crossing</option>
+                <option value="Hoppers crossing north">Hoppers crossing north</option>
+                <option value="Little river">Little river</option>
+                <option value="Manor lakes">Manor lakes</option>
+                <option value="Point cook">Point cook</option>
+                <option value="Tarneit">Tarneit</option>
+                <option value="Truganina">Truganina</option>
+                <option value="Truganina south">Truganina south</option>
+                <option value="Werribee">Werribee</option>
+                <option value="Werribee north">Werribee north</option>
+                <option value="Wyndham vale">Wyndham vale</option>
+              </select>
+            </div>
+            <div class="suburb-dropdown" id="dropdownTab3"  data-tab="tab3">
+              <select id="dropdownMenuTab3">
+                <option value=""disabled>Select a Suburb</option> 
+                <option value="">Show All</option> 
+                <option value="Berwick">Berwick</option>
+                <option value="Botanic ridge">Botanic ridge</option>
+                <option value="Clyde">Clyde</option>
+                <option value="Clyde north">Clyde north</option>
+                <option value="Cranbourne">Cranbourne</option>
+                <option value="Cranbourne east">Cranbourne east</option>
+                <option value="Cranbourne north">Cranbourne north</option>
+                <option value="Cranbourne south">Cranbourne south</option>
+                <option value="Cranbourne west">Cranbourne west</option>
+                <option value="Devon meadows">Devon meadows</option>
+                <option value="Doveton">Doveton</option>
+                <option value="Endeavour hills">Endeavour hills</option>
+                <option value="Hampton park">Hampton park</option>
+                <option value="Harkaway">Harkaway</option>
+                <option value="Hallam">Hallam</option>
+                <option value="Lynbrook">Lynbrook</option>
+                <option value="Lyndhurst">Lyndhurst</option>
+                <option value="Narre warren">Narre warren</option>
+                <option value="Narre warren north">Narre warren north</option>
+                <option value="Narre warren south">Narre warren south</option>
+                <option value="Pearcedale">Pearcedale</option>
+                <option value="Tooradin">Tooradin</option>
+              </select>
+            </div>
+            <div class="suburb-dropdown" id="dropdownTab4"  data-tab="tab4">
+              <select id="dropdownMenuTab4">
+                <option value=""disabled>Select a Suburb</option> 
+                <option value="">Show All</option> 
+                <option value="Albion">Albion</option>
+                <option value="Albanvale">Albanvale</option>
+                <option value="Ardeer">Ardeer</option>
+                <option value="Cairnlea">Cairnlea</option>
+                <option value="Delahey">Delahey</option>
+                <option value="Deer park">Deer park</option>
+                <option value="Derrimut">Derrimut</option>
+                <option value="Kealba">Kealba</option>
+                <option value="Keilor">Keilor</option>
+                <option value="Keilor downs">Keilor downs</option>
+                <option value="Kings park">Kings park</option>
+                <option value="St albans">St albans</option>
+                <option value="St albans south">St albans south</option>
+                <option value="Sunshine">Sunshine</option>
+                <option value="Sunshine north">Sunshine north</option>
+                <option value="Sunshine south west">Sunshine south west</option>
+                <option value="Sunshine west">Sunshine west</option>
+                <option value="Sydenham">Sydenham</option>
+                <option value="Taylors lakes">Taylors lakes</option>        
+              </select>
+            </div>
+            <div class="map" id="map"></div>
+          </div>
+        </section>
 
     <div id="footerContainer"></div>
 
